getAllUserRequest
